--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-gunicorn
-Flask
-Jinja2
-Werkzeug
-distribute
-wsgiref
+click==6.7
+Flask==0.12.2
+gunicorn==19.1.0
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==0.23
+nltk==3.2.4
+numpy==1.13.1
+PasteDeploy==1.5.2
+requests==2.14.2
+scikit-learn==0.18.2
+scipy==0.19.1
+six==1.10.0
+Werkzeug==0.12.2
